<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_8">

        <TableRow>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/species"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_detail_species_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_4"
                android:layout_weight="6"
                android:gravity="start"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                tools:text="Human" />
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/gender"
                android:textSize="@dimen/text_size_medium" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_gender_species_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_4"
                android:layout_weight="6"
                android:gravity="start"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                tools:text="Male" />
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/origin"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_origin_species_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_4"
                android:layout_weight="6"
                android:gravity="start"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                tools:text="Earth (C-137)" />
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/location"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location_species_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_4"
                android:layout_weight="6"
                android:gravity="start"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                tools:text="Citadel of Ricks" />
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_4"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/green_variant"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold"
                tools:text="Alive" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>