<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorAccent"
    app:layoutDescription="@xml/fragment_home_scene">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_home_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/rv_characters_list">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mtb_home_toolbar"
            style="@style/ToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_menu"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:titleTextColor="?attr/colorPrimary">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_search_icon"
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="@dimen/default_icon_size"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_8"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_filter"
                app:tint="?attr/colorPrimary" />

        </com.google.android.material.appbar.MaterialToolbar>

        <include
            android:id="@+id/include_search_bar"
            layout="@layout/layout_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_8"
            android:visibility="gone"
            app:layout_scrollFlags="scroll|enterAlways|snap" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_home_bar_layout">

        <LinearLayout
            android:id="@+id/llLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLocationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_location"
                app:tint="?attr/colorPrimary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLocation"
                style="@style/TextAppearance.AppCompat.Basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location" />
        </LinearLayout>

        <View
            android:id="@+id/viewFirstDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginVertical="@dimen/margin_4"
            android:alpha="0.7"
            android:background="@color/white_variant"
            app:layout_constraintTop_toBottomOf="@id/llLocation" />

        <LinearLayout
            android:id="@+id/llEpisode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewFirstDivider">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivEpisodesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_tv"
                app:tint="?attr/colorPrimary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEpisodes"
                style="@style/TextAppearance.AppCompat.Basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/episodes" />
        </LinearLayout>

        <View
            android:id="@+id/viewSecondDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginVertical="@dimen/margin_4"
            android:alpha="0.7"
            android:background="@color/white_variant"
            app:layout_constraintTop_toBottomOf="@id/llEpisode" />

        <LinearLayout
            android:id="@+id/llSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewSecondDivider">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSettingsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_settings"
                app:tint="?attr/colorPrimary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSettings"
                style="@style/TextAppearance.AppCompat.Basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_12"
        android:background="?attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clMenu">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:animateLayoutChanges="true"
            android:animationCache="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_auto_start="false"
            app:shimmer_repeat_mode="restart"
            app:shimmer_shape="linear">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/includeShimmerHome"
                    layout="@layout/shimmer_home" />

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_characters_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_container_detail"
            android:clipToPadding="true"
            android:paddingHorizontal="@dimen/margin_8"
            android:paddingTop="@dimen/margin_30"
            android:requiresFadingEdge="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spanCount="2"
            tools:listitem="@layout/adapter_character" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_no_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_result"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>